--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -463,7 +463,30 @@
     "ask_anything": "Ask anything about nutrition...",
     "clear_history": "Clear History",
     "confirm_clear": "Are you sure you want to clear all chat history?",
-    "chat_cleared": "Chat history cleared successfully"
+    "chat_cleared": "Chat history cleared successfully",
+    "welcome_message": "Hello! I'm your digital nutrition advisor. I'm here to help you with nutrition questions, meal planning, and personalized recommendations. How can I help you today?",
+    "subtitle": "What shall we eat today?",
+    "suggestion_breakfast": "What's recommended for breakfast?",
+    "suggestion_healthy": "I want something healthy",
+    "suggestion_quick": "I have 30 minutes to cook",
+    "suggestion_vegetarian": "I'm vegetarian",
+    "suggestion_snacks": "Snack ideas",
+    "breakfast": "Breakfast",
+    "quick": "Quick",
+    "healthy": "Healthy",
+    "snacks": "Snacks",
+    "typing": "AI is typing...",
+    "error_message": "Sorry, there was an error processing your message. Please try again.",
+    "network_error": "Network error occurred. Please check your connection.",
+    "ai_thinking": "AI is thinking...",
+    "generating_response": "Generating response...",
+    "analyzing_request": "Analyzing your request...",
+    "personalizing": "Personalizing recommendations...",
+    "safety_check": "Checking dietary restrictions...",
+    "finalizing": "Finalizing response...",
+    "allergen_warning": "Allergen Warning!",
+    "try_these": "Try these:",
+    "loading_profile": "Loading user profile..."
   },
   "recommended_menus": {
     "title": "Recommended Menus",
@@ -759,6 +782,114 @@
     "weekly": "weekly",
     "no": "No",
     "yes": "Yes",
-    "cancle":"Cancle"
+    "cancel": "Cancel",
+    "close": "Close",
+    "minimize": "Minimize",
+    "maximize": "Maximize",
+    "back": "Back",
+    "forward": "Forward",
+    "refresh": "Refresh",
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "warning": "Warning",
+    "info": "Information",
+    "confirm": "Confirm",
+    "delete": "Delete",
+    "edit": "Edit",
+    "update": "Update",
+    "add": "Add",
+    "remove": "Remove",
+    "search": "Search",
+    "filter": "Filter",
+    "sort": "Sort",
+    "view": "View",
+    "hide": "Hide",
+    "show": "Show",
+    "select": "Select",
+    "deselect": "Deselect",
+    "clear": "Clear",
+    "reset": "Reset",
+    "apply": "Apply",
+    "submit": "Submit",
+    "send": "Send",
+    "receive": "Receive",
+    "upload": "Upload",
+    "download": "Download",
+    "share": "Share",
+    "copy": "Copy",
+    "paste": "Paste",
+    "cut": "Cut",
+    "undo": "Undo",
+    "redo": "Redo",
+    "settings": "Settings",
+    "preferences": "Preferences",
+    "options": "Options",
+    "help": "Help",
+    "about": "About",
+    "contact": "Contact",
+    "support": "Support",
+    "feedback": "Feedback",
+    "report": "Report",
+    "privacy": "Privacy",
+    "terms": "Terms",
+    "license": "License",
+    "version": "Version",
+    "update_available": "Update Available",
+    "no_data": "No Data Available",
+    "empty_state": "Nothing to show here",
+    "try_again": "Try Again",
+    "retry": "Retry",
+    "continue": "Continue",
+    "skip": "Skip",
+    "finish": "Finish",
+    "complete": "Complete",
+    "incomplete": "Incomplete",
+    "pending": "Pending",
+    "processing": "Processing",
+    "failed": "Failed",
+    "cancelled": "Cancelled",
+    "expired": "Expired",
+    "active": "Active",
+    "inactive": "Inactive",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "online": "Online",
+    "offline": "Offline",
+    "connected": "Connected",
+    "disconnected": "Disconnected",
+    "syncing": "Syncing",
+    "synced": "Synced",
+    "not_synced": "Not Synced",
+    "available": "Available",
+    "unavailable": "Unavailable",
+    "required": "Required",
+    "optional": "Optional",
+    "recommended": "Recommended",
+    "popular": "Popular",
+    "new": "New",
+    "updated": "Updated",
+    "featured": "Featured",
+    "trending": "Trending",
+    "top_rated": "Top Rated",
+    "best_seller": "Best Seller",
+    "limited_time": "Limited Time",
+    "coming_soon": "Coming Soon",
+    "maintenance": "Under Maintenance",
+    "beta": "Beta",
+    "preview": "Preview",
+    "draft": "Draft",
+    "published": "Published",
+    "archived": "Archived",
+    "deleted": "Deleted",
+    "restored": "Restored",
+    "duplicated": "Duplicated",
+    "moved": "Moved",
+    "copied": "Copied",
+    "imported": "Imported",
+    "exported": "Exported",
+    "synchronized": "Synchronized",
+    "backed_up": "Backed Up",
+    "restored_from_backup": "Restored from Backup"
   }
 }
