--- a/client/src/i18n/locales/he.json
+++ b/client/src/i18n/locales/he.json
@@ -175,7 +175,102 @@
     "view_all": "צפייה בהכל",
     "done": "לסגירה",
     "calories": "קלוריות",
-    "cancle": "Cancle"
+    "minimize": "מזעור",
+    "maximize": "הגדלה",
+    "forward": "קדימה",
+    "info": "מידע",
+    "warning": "אזהרה",
+    "confirm": "אישור",
+    "remove": "הסרה",
+    "sort": "מיון",
+    "view": "צפייה",
+    "hide": "הסתרה",
+    "show": "הצגה",
+    "select": "בחירה",
+    "deselect": "ביטול בחירה",
+    "clear": "ניקוי",
+    "reset": "איפוס",
+    "apply": "החלה",
+    "submit": "שליחה",
+    "send": "שלח",
+    "receive": "קבלה",
+    "upload": "העלאה",
+    "download": "הורדה",
+    "share": "שיתוף",
+    "copy": "העתקה",
+    "paste": "הדבקה",
+    "cut": "גזירה",
+    "undo": "ביטול פעולה",
+    "redo": "חזרה על פעולה",
+    "settings": "הגדרות",
+    "preferences": "העדפות",
+    "options": "אפשרויות",
+    "help": "עזרה",
+    "about": "אודות",
+    "contact": "יצירת קשר",
+    "support": "תמיכה",
+    "feedback": "משוב",
+    "report": "דיווח",
+    "privacy": "פרטיות",
+    "terms": "תנאים",
+    "license": "רישיון",
+    "version": "גרסה",
+    "update_available": "עדכון זמין",
+    "no_data": "אין נתונים זמינים",
+    "empty_state": "אין מה להציג כאן",
+    "try_again": "נסה שוב",
+    "continue": "המשך",
+    "skip": "דלג",
+    "finish": "סיום",
+    "complete": "הושלם",
+    "incomplete": "לא הושלם",
+    "pending": "ממתין",
+    "processing": "מעבד",
+    "failed": "נכשל",
+    "cancelled": "בוטל",
+    "expired": "פג תוקף",
+    "active": "פעיל",
+    "inactive": "לא פעיל",
+    "enabled": "מופעל",
+    "disabled": "מושבת",
+    "online": "מחובר",
+    "offline": "לא מחובר",
+    "connected": "מחובר",
+    "disconnected": "מנותק",
+    "syncing": "מסנכרן",
+    "synced": "מסונכרן",
+    "not_synced": "לא מסונכרן",
+    "available": "זמין",
+    "unavailable": "לא זמין",
+    "required": "נדרש",
+    "optional": "אופציונלי",
+    "recommended": "מומלץ",
+    "popular": "פופולרי",
+    "new": "חדש",
+    "updated": "עודכן",
+    "featured": "מומלץ",
+    "trending": "טרנדי",
+    "top_rated": "מדורג גבוה",
+    "best_seller": "הנמכר ביותר",
+    "limited_time": "זמן מוגבל",
+    "coming_soon": "בקרוב",
+    "maintenance": "בתחזוקה",
+    "beta": "בטא",
+    "preview": "תצוגה מקדימה",
+    "draft": "טיוטה",
+    "published": "פורסם",
+    "archived": "בארכיון",
+    "deleted": "נמחק",
+    "restored": "שוחזר",
+    "duplicated": "שוכפל",
+    "moved": "הועבר",
+    "copied": "הועתק",
+    "imported": "יובא",
+    "exported": "יוצא",
+    "synchronized": "סונכרן",
+    "backed_up": "גובה",
+    "restored_from_backup": "שוחזר מגיבוי",
+    "of": "מתוך"
   },
   "tabs": {
     "home": "בית",
@@ -458,7 +553,30 @@
     "ask_anything": "שאלו כל דבר על תזונה...",
     "clear_history": "מחיקת היסטוריה",
     "confirm_clear": "האם אתה בטוח שברצונך למחוק את כל השיחה?",
-    "chat_cleared": "השיחה נמחקה בהצלחה"
+    "chat_cleared": "השיחה נמחקה בהצלחה",
+    "welcome_message": "שלום! אני היועץ התזונתי הדיגיטלי שלך. אני כאן לעזור לך עם שאלות תזונה, תכנון ארוחות והמלצות מותאמות אישית. איך אוכל לעזור לך היום?",
+    "subtitle": "מה נאכל היום?",
+    "suggestion_breakfast": "מה מומלץ לארוחת בוקר?",
+    "suggestion_healthy": "אני רוצה משהו בריא",
+    "suggestion_quick": "יש לי 30 דקות לבישול",
+    "suggestion_vegetarian": "אני צמחוני",
+    "suggestion_snacks": "רעיונות לחטיפים",
+    "breakfast": "ארוחת בוקר",
+    "quick": "מהיר",
+    "healthy": "בריא",
+    "snacks": "חטיפים",
+    "typing": "AI מקליד...",
+    "error_message": "מצטער, אירעה שגיאה בעיבוד ההודעה שלך. אנא נסה שוב.",
+    "network_error": "אירעה שגיאה ברשת. אנא בדוק את החיבור שלך.",
+    "ai_thinking": "AI חושב...",
+    "generating_response": "יוצר תגובה...",
+    "analyzing_request": "מנתח את הבקשה שלך...",
+    "personalizing": "מתאים המלצות אישיות...",
+    "safety_check": "בודק הגבלות תזונתיות...",
+    "finalizing": "מסיים תגובה...",
+    "allergen_warning": "אזהרת אלרגן!",
+    "try_these": "נסה את אלה:",
+    "loading_profile": "טוען פרופיל משתמש..."
   },
   "recommended_menus": {
     "title": "תפריטים מומלצים",
