--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -890,6 +890,61 @@
     "exported": "Exported",
     "synchronized": "Synchronized",
     "backed_up": "Backed Up",
-    "restored_from_backup": "Restored from Backup"
+    "restored_from_backup": "Restored from Backup",
+    "unknown_meal": "Unknown Meal",
+    "network_error": "Network Error",
+    "connection_error": "Connection Error",
+    "server_error": "Server Error",
+    "timeout_error": "Request Timeout",
+    "permission_denied": "Permission Denied",
+    "not_found": "Not Found",
+    "invalid_data": "Invalid Data",
+    "validation_error": "Validation Error",
+    "authentication_error": "Authentication Error",
+    "authorization_error": "Authorization Error",
+    "quota_exceeded": "Quota Exceeded",
+    "rate_limit": "Rate Limit Exceeded",
+    "service_unavailable": "Service Unavailable",
+    "maintenance_mode": "Maintenance Mode",
+    "feature_disabled": "Feature Disabled",
+    "upgrade_required": "Upgrade Required",
+    "subscription_expired": "Subscription Expired",
+    "payment_required": "Payment Required",
+    "trial_expired": "Trial Expired",
+    "account_suspended": "Account Suspended",
+    "account_locked": "Account Locked",
+    "email_not_verified": "Email Not Verified",
+    "phone_not_verified": "Phone Not Verified",
+    "profile_incomplete": "Profile Incomplete",
+    "setup_required": "Setup Required",
+    "configuration_error": "Configuration Error",
+    "integration_error": "Integration Error",
+    "sync_error": "Sync Error",
+    "backup_error": "Backup Error",
+    "restore_error": "Restore Error",
+    "import_error": "Import Error",
+    "export_error": "Export Error",
+    "file_not_found": "File Not Found",
+    "file_too_large": "File Too Large",
+    "file_format_error": "Invalid File Format",
+    "image_processing_error": "Image Processing Error",
+    "video_processing_error": "Video Processing Error",
+    "audio_processing_error": "Audio Processing Error",
+    "camera_error": "Camera Error",
+    "microphone_error": "Microphone Error",
+    "location_error": "Location Error",
+    "storage_error": "Storage Error",
+    "memory_error": "Memory Error",
+    "cpu_error": "CPU Error",
+    "battery_low": "Battery Low",
+    "device_not_supported": "Device Not Supported",
+    "os_not_supported": "OS Not Supported",
+    "browser_not_supported": "Browser Not Supported",
+    "feature_not_supported": "Feature Not Supported",
+    "coming_soon_feature": "Coming Soon",
+    "beta_feature": "Beta Feature",
+    "experimental_feature": "Experimental Feature",
+    "deprecated_feature": "Deprecated Feature",
+    "legacy_feature": "Legacy Feature"
   }
 }
