--- a/client/src/i18n/locales/he.json
+++ b/client/src/i18n/locales/he.json
@@ -270,6 +270,61 @@
     "synchronized": "סונכרן",
     "backed_up": "גובה",
     "restored_from_backup": "שוחזר מגיבוי",
+    "unknown_meal": "ארוחה לא ידועה",
+    "network_error": "שגיאת רשת",
+    "connection_error": "שגיאת חיבור",
+    "server_error": "שגיאת שרת",
+    "timeout_error": "תם הזמן הקצוב",
+    "permission_denied": "הרשאה נדחתה",
+    "not_found": "לא נמצא",
+    "invalid_data": "נתונים לא תקינים",
+    "validation_error": "שגיאת אימות",
+    "authentication_error": "שגיאת אימות זהות",
+    "authorization_error": "שגיאת הרשאה",
+    "quota_exceeded": "חרגת מהמכסה",
+    "rate_limit": "חרגת ממגבלת הקצב",
+    "service_unavailable": "השירות לא זמין",
+    "maintenance_mode": "מצב תחזוקה",
+    "feature_disabled": "התכונה מושבתת",
+    "upgrade_required": "נדרש שדרוג",
+    "subscription_expired": "המנוי פג",
+    "payment_required": "נדרש תשלום",
+    "trial_expired": "תקופת הניסיון הסתיימה",
+    "account_suspended": "החשבון מושעה",
+    "account_locked": "החשבון נעול",
+    "email_not_verified": "האימייל לא מאומת",
+    "phone_not_verified": "הטלפון לא מאומת",
+    "profile_incomplete": "הפרופיל לא שלם",
+    "setup_required": "נדרשת הגדרה",
+    "configuration_error": "שגיאת תצורה",
+    "integration_error": "שגיאת אינטגרציה",
+    "sync_error": "שגיאת סנכרון",
+    "backup_error": "שגיאת גיבוי",
+    "restore_error": "שגיאת שחזור",
+    "import_error": "שגיאת יבוא",
+    "export_error": "שגיאת יצוא",
+    "file_not_found": "קובץ לא נמצא",
+    "file_too_large": "קובץ גדול מדי",
+    "file_format_error": "פורמט קובץ לא תקין",
+    "image_processing_error": "שגיאת עיבוד תמונה",
+    "video_processing_error": "שגיאת עיבוד וידאו",
+    "audio_processing_error": "שגיאת עיבוד אודיו",
+    "camera_error": "שגיאת מצלמה",
+    "microphone_error": "שגיאת מיקרופון",
+    "location_error": "שגיאת מיקום",
+    "storage_error": "שגיאת אחסון",
+    "memory_error": "שגיאת זיכרון",
+    "cpu_error": "שגיאת מעבד",
+    "battery_low": "סוללה חלשה",
+    "device_not_supported": "המכשיר לא נתמך",
+    "os_not_supported": "מערכת ההפעלה לא נתמכת",
+    "browser_not_supported": "הדפדפן לא נתמך",
+    "feature_not_supported": "התכונה לא נתמכת",
+    "coming_soon_feature": "בקרוב",
+    "beta_feature": "תכונת בטא",
+    "experimental_feature": "תכונה ניסיונית",
+    "deprecated_feature": "תכונה מיושנת",
+    "legacy_feature": "תכונה ישנה",
     "of": "מתוך"
   },
   "tabs": {
