--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -400,23 +400,87 @@
     "preferences": "Personal preferences"
   },
   "statistics": {
-    "title": "Statistics",
+    "title": "Progress & Statistics",
+    "subtitle": "Detailed tracking of nutritional metrics and personal progress",
     "today": "Today",
     "week": "Week",
     "month": "Month",
     "custom": "Custom",
     "start_date": "Start Date",
     "end_date": "End Date",
-    "nutrition_overview": "Nutrition Overview",
-    "calories": "Calories",
+    "macronutrients": "Macronutrients",
+    "micronutrients": "Micronutrients",
+    "lifestyle": "Lifestyle",
+    "quality": "Nutrition Quality",
+    "alerts": "Alerts",
+    "recommendations": "Recommendations",
+    "trend": "Trend",
+    "weekly_average": "Weekly Average",
+    "change": "Change",
+    "excellent": "Excellent",
+    "good": "Good",
+    "warning": "Warning",
+    "danger": "Out of Range",
+    "view_details": "View Details",
+    "hide_alerts": "Hide Alerts",
+    "show_alerts": "Show Alerts",
+    "no_alerts": "No alerts at the moment",
+    "alerts_title": "Important Alerts",
+    "progress_overview": "Progress Overview",
+    "weekly_progress": "Weekly Progress",
+    "achievements": "Achievements",
+    "insights": "Personal Insights",
+    "gamification": "Personal Stats",
+    "badges": "Badges",
+    "streaks": "Streaks",
+    "comparison": "Comparison",
+    "wellbeing": "Wellbeing",
+    "level": "Level",
+    "xp": "XP",
+    "next_level": "To Next Level",
+    "daily_streak": "Daily Streak",
+    "weekly_streak": "Weekly Streak",
+    "perfect_days": "Perfect Days",
+    "total_points": "Total Points",
+    "view_all_achievements": "View All Achievements",
+    "unlocked": "Unlocked",
+    "locked": "Locked",
+    "progress": "Progress",
+    "complete_meals_first": "Complete all your daily meals to receive nutritional insights",
+    "meals_completed": "Meals Completed",
+    "of": "of",
+    "total_calories": "Total Daily Calories",
     "protein": "Protein",
+    "carbohydrates": "Carbohydrates",
     "carbs": "Carbs",
-    "fat": "Fat",
     "fats": "Fats",
-    "additional_nutrients": "Additional Nutrients",
-    "fiber": "Fiber",
+    "fat": "Fat",
+    "fiber": "Dietary Fiber",
+    "sugars": "Sugars",
     "sugar": "Sugar",
     "sodium": "Sodium",
+    "hydration": "Hydration Level",
+    "kcal": "kcal",
+    "g": "g",
+    "mg": "mg",
+    "ml": "ml",
+    "percent": "%",
+    "increase_intake": "Increase intake",
+    "decrease_intake": "Decrease intake",
+    "maintain_level": "Maintain level",
+    "consult_doctor": "Consult doctor",
+    "no_data_message": "No data available for this period",
+    "loading_message": "Loading data...",
+    "error_message": "Error loading data",
+    "retry_button": "Retry",
+    "days": "days",
+    "successful_days": "Successful Days",
+    "average_completion": "Average Completion",
+    "best_streak": "Best Streak",
+    "current_streak": "Current Streak",
+    "nutrition_overview": "Nutrition Overview",
+    "calories": "Calories",
+    "additional_nutrients": "Additional Nutrients",
     "vitamins": "Vitamins",
     "beverages": "Beverages",
     "water": "Water",
