--- a/client/src/i18n/locales/he.json
+++ b/client/src/i18n/locales/he.json
@@ -544,54 +544,119 @@
     "account": "חשבון",
     "preferences": "העדפות אישיות"
   },
-  "statistics": {
-    "title": "סטטיסטיקות",
-    "today": "היום",
-    "week": "שבוע",
-    "month": "חודש",
-    "custom": "מותאם אישית",
-    "start_date": "תאריך התחלה",
-    "end_date": "תאריך סיום",
-    "nutrition_overview": "סקירת תזונה",
-    "calories": "קלוריות",
-    "protein": "חלבון",
-    "carbs": "פחמימות",
-    "fat": "שומן",
-    "fats": "שומנים",
-    "additional_nutrients": "חומרי מזון נוספים",
-    "fiber": "סיבים",
-    "sugar": "סוכר",
-    "sodium": "נתרן",
-    "vitamins": "ויטמינים",
-    "beverages": "משקאות",
-    "water": "מים",
-    "alcohol": "אלכוהול",
-    "caffeine": "קפאין",
-    "meal_summary": "סיכום ארוחות",
-    "total_meals": "סה\"כ ארוחות",
-    "total_days": "סה\"כ ימים",
-    "excellent_health": "בריאות מעולה",
-    "good_health": "בריאות טובה",
-    "needs_improvement": "זקוק לשיפור",
-    "load_error": "שגיאה בטעינת הסטטיסטיקות",
-    "daily_trends": "מגמות יומיות",
-    "line_chart": "גרף קווים",
-    "bar_chart": "גרף עמודות",
-    "macronutrient_distribution": "התפלגות מקרו-נוטריינטים",
-    "additional_metrics": "מדדים נוספים",
-    "cholesterol": "כולסטרול",
-    "glycemic_index": "מדד גליקמי",
-    "insulin_index": "מדד אינסולין",
-    "omega_3": "אומגה-3",
-    "omega_6": "אומגה-6",
-    "saturated_fats": "שומנים רוויים",
-    "monounsaturated_fats": "שומנים חד-בלתי רוויים",
-    "polyunsaturated_fats": "שומנים רב-בלתי רוויים",
-    "soluble_fiber": "סיבים מסיסים",
-    "insoluble_fiber": "סיבים בלתי מסיסים",
-    "confidence": "רמת ביטחון",
-    "no_data": "אין נתונים זמינים"
-  },
+"statistics": {
+  "title": "התקדמות וסטטיסטיקות",
+  "subtitle": "מעקב מפורט אחרי מדדי תזונה והתקדמות אישית",
+  "today": "היום",
+  "week": "שבוע",
+  "month": "חודש",
+  "custom": "מותאם אישית",
+  "start_date": "תאריך התחלה",
+  "end_date": "תאריך סיום",
+  "macronutrients": "מקרו‑נוטריינטים",
+  "micronutrients": "מיקרו‑נוטריינטים",
+  "lifestyle": "אורח חיים",
+  "quality": "איכות תזונה",
+  "alerts": "התראות",
+  "recommendations": "המלצות",
+  "trend": "מגמה",
+  "weekly_average": "ממוצע שבועי",
+  "change": "שינוי",
+  "excellent": "מעולה",
+  "good": "טוב",
+  "warning": "אזהרה",
+  "danger": "מחוץ לטווח",
+  "view_details": "הצג פרטים",
+  "hide_alerts": "הסתר התראות",
+  "show_alerts": "הצג התראות",
+  "no_alerts": "אין התראות כרגע",
+  "alerts_title": "התראות חשובות",
+  "progress_overview": "סקירת התקדמות",
+  "weekly_progress": "התקדמות שבועית",
+  "achievements": "הישגים",
+  "insights": "תובנות אישיות",
+  "gamification": "סטסיקות אישיות",
+  "badges": "תגים",
+  "streaks": "רצפים",
+  "comparison": "השוואה",
+  "wellbeing": "שלוה ואיכות חיים",
+  "level": "רמה",
+  "xp": "XP",
+  "next_level": "לרמה הבאה",
+  "daily_streak": "רצף יומי",
+  "weekly_streak": "רצף שבועי",
+  "perfect_days": "ימים מושלמים",
+  "total_points": "ניקוד כולל",
+  "view_all_achievements": "הצג את כל ההישגים",
+  "unlocked": "נפתח",
+  "locked": "נעול",
+  "progress": "התקדמות",
+  "complete_meals_first": "השלים את כל הארוחות היומיות כדי לקבל תובנות תזונתיות",
+  "meals_completed": "ארוחות שהושלמו",
+  "of": "מתוך",
+  "total_calories": "קלוריות יומיות כוללות",
+  "protein": "חלבונים",
+  "carbohydrates": "פחמימות",
+  "carbs": "פחמימות",
+  "fats": "שומנים",
+  "fat": "שומן",
+  "fiber": "סיבים תזונתיים",
+  "sugars": "סוכרים",
+  "sugar": "סוכר",
+  "sodium": "נתרן",
+  "hydration": "רמות הידרציה",
+  "kcal": "קק״ל",
+  "g": "גרם",
+  "mg": "mg",
+  "ml": "ml",
+  "percent": "‎%",
+  "increase_intake": "הגבר צריכה",
+  "decrease_intake": "הקטן צריכה",
+  "maintain_level": "שמור על רמה",
+  "consult_doctor": "יש להיוועץ ברופא",
+  "no_data_message": "אין נתונים זמינים לתקופה זו",
+  "loading_message": "טוען נתונים…",
+  "error_message": "שגיאה בטעינת נתונים",
+  "retry_button": "נסה שוב",
+  "days": "ימים",
+  "successful_days": "ימים מוצלחים",
+  "average_completion": "ממוצע השלמה",
+  "best_streak": "הרצף הטוב ביותר",
+  "current_streak": "הרצף הנוכחי",
+  "nutrition_overview": "סקירת תזונה",
+  "calories": "קלוריות",
+  "additional_nutrients": "נוטריינטים נוספים",
+  "vitamins": "ויטמינים",
+  "beverages": "משקאות",
+  "water": "מים",
+  "alcohol": "אלכוהול",
+  "caffeine": "קפאין",
+  "meal_summary": "סיכום ארוחה",
+  "total_meals": "סה\"כ ארוחות",
+  "total_days": "סה\"כ ימים",
+  "excellent_health": "בריאות מצוינת",
+  "good_health": "בריאות טובה",
+  "needs_improvement": "זקוק לשיפור",
+  "load_error": "נכשלה טעינת הסטטיסטיקות",
+  "daily_trends": "מגמות יומיות",
+  "line_chart": "גרף קו",
+  "bar_chart": "גרף עמודות",
+  "macronutrient_distribution": "תפלגות מקרונוטריינטים",
+  "additional_metrics": "מדדים נוספים",
+  "cholesterol": "כולסטרול",
+  "glycemic_index": "מדד גליקמי",
+  "insulin_index": "מדד אינסולין",
+  "omega_3": "אומגה‑3",
+  "omega_6": "אומגה‑6",
+  "saturated_fats": "שומנים רוויים",
+  "monounsaturated_fats": "שומנים חד בלתי רוויים",
+  "polyunsaturated_fats": "שומנים רב בלתי רוויים",
+  "soluble_fiber": "סיבים מסיסים",
+  "insoluble_fiber": "סיבים בלתי מסיסים",
+  "confidence": "רמת ביטחון",
+  "no_data": "אין נתונים זמינים"
+},
+
   "devices": {
     "title": "מכשירים מחוברים",
     "no_devices": "אין מכשירים מחוברים",
