--- a/client/src/i18n/locales/he.json
+++ b/client/src/i18n/locales/he.json
@@ -152,13 +152,13 @@
     "commitmentLevelRequired": "רמת מחויבות נדרשת"
   },
   "common": {
+    "save": "שמור",
+    "cancel": "בטל",
+    "delete": "מחק",
+    "edit": "ערוך",
     "loading": "טוען...",
     "error": "שגיאה",
     "success": "הצלחה",
-    "cancel": "ביטול",
-    "save": "שמירה",
-    "delete": "מחיקה",
-    "edit": "עריכה",
     "update": "עדכון",
     "add": "הוספה",
     "search": "חיפוש",
@@ -326,6 +326,47 @@
     "deprecated_feature": "תכונה מיושנת",
     "legacy_feature": "תכונה ישנה",
     "of": "מתוך"
+  },
+  "achievements": {
+    "title": "הישגים",
+    "subtitle": "עקוב אחר ההתקדמות שלך",
+    "level": "רמה",
+    "currentXP": "ניסיון נוכחי",
+    "totalXP": "ניסיון כולל",
+    "currentStreak": "רצף נוכחי",
+    "bestStreak": "הרצף הטוב",
+    "daysComplete": "ימים הושלמו",
+    "xpReward": "פרס ניסיון",
+    "progress": "התקדמות",
+    "unlockedOn": "נפתח ב:",
+    "categories": {
+      "all": "הכל",
+      "milestone": "אבני דרך",
+      "streak": "רצפים",
+      "level": "רמות",
+      "special": "מיוחדים"
+    },
+    "rarity": {
+      "common": "רגיל",
+      "uncommon": "לא שכיח",
+      "rare": "נדיר",
+      "epic": "אפי",
+      "legendary": "אגדי"
+    },
+    "all": "הכל",
+    "unlocked": "פתוח",
+    "locked": "נעול",
+    "total_xp": "סה\"כ נק' ניסיון",
+    "xp_reward": "פרס נק' ניסיון",
+    "achievement_unlocked": "הישג נפתח!",
+    "awesome": "מעולה!",
+    "view_all_achievements": "צפה בהכל"
+  },
+  "xp": {
+    "gained": "נק׳ ניסיון הושגו",
+    "levelUp": "עליה ברמה!",
+    "newLevel": "רמה",
+    "newAchievement": "הישג חדש!"
   },
   "tabs": {
     "home": "בית",
@@ -546,119 +587,119 @@
     "account": "חשבון",
     "preferences": "העדפות אישיות"
   },
-"statistics": {
-  "title": "התקדמות וסטטיסטיקות",
-  "subtitle": "מעקב מפורט אחרי מדדי תזונה והתקדמות אישית",
-  "today": "היום",
-  "week": "שבוע",
-  "month": "חודש",
-  "custom": "מותאם אישית",
-  "start_date": "תאריך התחלה",
-  "end_date": "תאריך סיום",
-  "macronutrients": "מקרו‑נוטריינטים",
-  "micronutrients": "מיקרו‑נוטריינטים",
-  "lifestyle": "אורח חיים",
-  "quality": "איכות תזונה",
-  "alerts": "התראות",
-  "recommendations": "המלצות",
-  "trend": "מגמה",
-  "weekly_average": "ממוצע שבועי",
-  "change": "שינוי",
-  "excellent": "מעולה",
-  "good": "טוב",
-  "warning": "אזהרה",
-  "danger": "מחוץ לטווח",
-  "view_details": "הצג פרטים",
-  "hide_alerts": "הסתר התראות",
-  "show_alerts": "הצג התראות",
-  "no_alerts": "אין התראות כרגע",
-  "alerts_title": "התראות חשובות",
-  "progress_overview": "סקירת התקדמות",
-  "weekly_progress": "התקדמות שבועית",
-  "achievements": "הישגים",
-  "insights": "תובנות אישיות",
-  "gamification": "סטסיקות אישיות",
-  "badges": "תגים",
-  "streaks": "רצפים",
-  "comparison": "השוואה",
-  "wellbeing": "שלוה ואיכות חיים",
-  "level": "רמה",
-  "xp": "XP",
-  "next_level": "לרמה הבאה",
-  "daily_streak": "רצף יומי",
-  "weekly_streak": "רצף שבועי",
-  "perfect_days": "ימים מושלמים",
-  "total_points": "ניקוד כולל",
-  "view_all_achievements": "הצג את כל ההישגים",
-  "unlocked": "נפתח",
-  "locked": "נעול",
-  "progress": "התקדמות",
-  "complete_meals_first": "השלים את כל הארוחות היומיות כדי לקבל תובנות תזונתיות",
-  "meals_completed": "ארוחות שהושלמו",
-  "of": "מתוך",
-  "total_calories": "קלוריות יומיות כוללות",
-  "protein": "חלבונים",
-  "carbohydrates": "פחמימות",
-  "carbs": "פחמימות",
-  "fats": "שומנים",
-  "fat": "שומן",
-  "fiber": "סיבים תזונתיים",
-  "sugars": "סוכרים",
-  "sugar": "סוכר",
-  "sodium": "נתרן",
-  "hydration": "רמות הידרציה",
-  "kcal": "קק״ל",
-  "g": "גרם",
-  "mg": "mg",
-  "ml": "ml",
-  "percent": "‎%",
-  "increase_intake": "הגבר צריכה",
-  "decrease_intake": "הקטן צריכה",
-  "maintain_level": "שמור על רמה",
-  "consult_doctor": "יש להיוועץ ברופא",
-  "no_data_message": "אין נתונים זמינים לתקופה זו",
-  "loading_message": "טוען נתונים…",
-  "error_message": "שגיאה בטעינת נתונים",
-  "retry_button": "נסה שוב",
-  "days": "ימים",
-  "successful_days": "ימים מוצלחים",
-  "average_completion": "ממוצע השלמה",
-  "best_streak": "הרצף הטוב ביותר",
-  "current_streak": "הרצף הנוכחי",
-  "nutrition_overview": "סקירת תזונה",
-  "calories": "קלוריות",
-  "additional_nutrients": "נוטריינטים נוספים",
-  "vitamins": "ויטמינים",
-  "beverages": "משקאות",
-  "water": "מים",
-  "alcohol": "אלכוהול",
-  "caffeine": "קפאין",
-  "meal_summary": "סיכום ארוחה",
-  "total_meals": "סה\"כ ארוחות",
-  "total_days": "סה\"כ ימים",
-  "excellent_health": "בריאות מצוינת",
-  "good_health": "בריאות טובה",
-  "needs_improvement": "זקוק לשיפור",
-  "load_error": "נכשלה טעינת הסטטיסטיקות",
-  "daily_trends": "מגמות יומיות",
-  "line_chart": "גרף קו",
-  "bar_chart": "גרף עמודות",
-  "macronutrient_distribution": "תפלגות מקרונוטריינטים",
-  "additional_metrics": "מדדים נוספים",
-  "cholesterol": "כולסטרול",
-  "glycemic_index": "מדד גליקמי",
-  "insulin_index": "מדד אינסולין",
-  "omega_3": "אומגה‑3",
-  "omega_6": "אומגה‑6",
-  "saturated_fats": "שומנים רוויים",
-  "monounsaturated_fats": "שומנים חד בלתי רוויים",
-  "polyunsaturated_fats": "שומנים רב בלתי רוויים",
-  "soluble_fiber": "סיבים מסיסים",
-  "insoluble_fiber": "סיבים בלתי מסיסים",
-  "confidence": "רמת ביטחון",
-  "no_data": "אין נתונים זמינים"
-},
-
+  "statistics": {
+    "title": "התקדמות וסטטיסטיקות",
+    "subtitle": "מעקב מפורט אחרי מדדי תזונה והתקדמות אישית",
+    "today": "היום",
+    "week": "שבוע",
+    "month": "חודש",
+    "custom": "מותאם אישית",
+    "start_date": "תאריך התחלה",
+    "end_date": "תאריך סיום",
+    "macronutrients": "מקרו‑נוטריינטים",
+    "micronutrients": "מיקרו‑נוטריינטים",
+    "lifestyle": "אורח חיים",
+    "quality": "איכות תזונה",
+    "alerts": "התראות",
+    "recommendations": "המלצות",
+    "trend": "מגמה",
+    "weekly_average": "ממוצע שבועי",
+    "change": "שינוי",
+    "excellent": "מעולה",
+    "good": "טוב",
+    "warning": "אזהרה",
+    "danger": "מחוץ לטווח",
+    "view_details": "הצג פרטים",
+    "hide_alerts": "הסתר התראות",
+    "show_alerts": "הצג התראות",
+    "no_alerts": "אין התראות כרגע",
+    "alerts_title": "התראות חשובות",
+    "progress_overview": "סקירת התקדמות",
+    "weekly_progress": "התקדמות שבועית",
+    "achievements": "הישגים",
+    "insights": "תובנות אישיות",
+    "gamification": "סטסיקות אישיות",
+    "badges": "תגים",
+    "streaks": "רצפים",
+    "comparison": "השוואה",
+    "wellbeing": "שלוה ואיכות חיים",
+    "level": "רמה",
+    "xp": "XP",
+    "next_level": "לרמה הבאה",
+    "daily_streak": "רצף יומי",
+    "weekly_streak": "רצף שבועי",
+    "perfect_days": "ימים מושלמים",
+    "total_points": "סה\"כ נקודות",
+    "view_all_achievements": "צפה בהכל",
+    "unlocked": "נפתח",
+    "locked": "נעול",
+    "progress": "התקדמות",
+    "complete_meals_first": "השלם את כל הארוחות היומיות כדי לקבל תובנות תזונתיות",
+    "meals_completed": "ארוחות שהושלמו",
+    "of": "מתוך",
+    "total_calories": "קלוריות יומיות כוללות",
+    "protein": "חלבונים",
+    "carbohydrates": "פחמימות",
+    "carbs": "פחמימות",
+    "fats": "שומנים",
+    "fat": "שומן",
+    "fiber": "סיבים תזונתיים",
+    "sugars": "סוכרים",
+    "sugar": "סוכר",
+    "sodium": "נתרן",
+    "hydration": "רמות הידרציה",
+    "kcal": "קק״ל",
+    "g": "גרם",
+    "mg": "mg",
+    "ml": "ml",
+    "percent": "‎%",
+    "All": "הכל",
+    "increase_intake": "הגבר צריכה",
+    "decrease_intake": "הקטן צריכה",
+    "maintain_level": "שמור על רמה",
+    "consult_doctor": "יש להיוועץ ברופא",
+    "no_data_message": "אין נתונים זמינים לתקופה זו",
+    "loading_message": "טוען נתונים…",
+    "error_message": "שגיאה בטעינת נתונים",
+    "retry_button": "נסה שוב",
+    "days": "ימים",
+    "successful_days": "ימים מוצלחים",
+    "average_completion": "ממוצע השלמה",
+    "best_streak": "הרצף הטוב ביותר",
+    "current_streak": "הרצף הנוכחי",
+    "nutrition_overview": "סקירת תזונה",
+    "calories": "קלוריות",
+    "additional_nutrients": "נוטריינטים נוספים",
+    "vitamins": "ויטמינים",
+    "beverages": "משקאות",
+    "water": "מים",
+    "alcohol": "אלכוהול",
+    "caffeine": "קפאין",
+    "meal_summary": "סיכום ארוחה",
+    "total_meals": "סה\"כ ארוחות",
+    "total_days": "סה\"כ ימים",
+    "excellent_health": "בריאות מצוינת",
+    "good_health": "בריאות טובה",
+    "needs_improvement": "זקוק לשיפור",
+    "load_error": "נכשלה טעינת הסטטיסטיקות",
+    "daily_trends": "מגמות יומיות",
+    "line_chart": "גרף קו",
+    "bar_chart": "גרף עמודות",
+    "macronutrient_distribution": "תפלגות מקרונוטריינטים",
+    "additional_metrics": "מדדים נוספים",
+    "cholesterol": "כולסטרול",
+    "glycemic_index": "מדד גליקמי",
+    "insulin_index": "מדד אינסולין",
+    "omega_3": "אומגה‑3",
+    "omega_6": "אומגה‑6",
+    "saturated_fats": "שומנים רוויים",
+    "monounsaturated_fats": "שומנים חד בלתי רוויים",
+    "polyunsaturated_fats": "שומנים רב בלתי רוויים",
+    "soluble_fiber": "סיבים מסיסים",
+    "insoluble_fiber": "סיבים בלתי מסיסים",
+    "confidence": "רמת ביטחון",
+    "no_data": "אין נתונים זמינים"
+  },
   "devices": {
     "title": "מכשירים מחוברים",
     "no_devices": "אין מכשירים מחוברים",
