--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -512,18 +512,90 @@
     "insoluble_fiber": "Insoluble Fiber",
     "confidence": "Confidence",
     "no_data": "No data available",
-    "all":"All"
+    "all": "All"
   },
   "devices": {
-    "title": "Connected Devices",
-    "no_devices": "No devices connected",
-    "add_device": "Add Device",
+    "title": "Smart Devices",
+    "subtitle": "Connect your fitness trackers and health apps for comprehensive wellness tracking",
+    "no_devices_connected": "No Connected Devices",
+    "connect_devices_description": "Connect your wearables and health apps to automatically track your fitness data, calories burned, steps, and more.",
+    "available_devices": "Available Devices",
+    "connected_devices": "Connected Devices",
+    "connect_devices_subtitle": "Tap any device below to connect and start syncing your health data",
     "device_status": "Device Status",
     "connected": "Connected",
     "disconnected": "Disconnected",
+    "primary": "Primary",
     "sync_data": "Sync Data",
     "last_sync": "Last Sync",
-    "remove_device": "Remove Device"
+    "remove_device": "Remove Device",
+    "sync_all_devices": "Sync All Devices",
+    "todays_calorie_balance": "Today's Calorie Balance",
+    "calories_in": "Calories In",
+    "calories_out": "Calories Out",
+    "net_balance": "Net Balance",
+    "todays_activity": "Today's Activity",
+    "steps": "Steps",
+    "calories_burned": "Calories Burned",
+    "active_minutes": "Active Minutes",
+    "avg_heart_rate": "Avg Heart Rate",
+    "about_device_integration": "About Device Integration",
+    "apple_health": "Apple Health",
+    "apple_health_desc": "Automatically syncs with iPhone Health app for seamless data integration",
+    "google_fit": "Google Fit",
+    "google_fit_desc": "Connect your Google Fit account to track activities across Android devices",
+    "fitbit": "Fitbit",
+    "fitbit_desc": "Sync your Fitbit tracker data including steps, heart rate, and sleep patterns",
+    "garmin": "Garmin",
+    "garmin_desc": "Import detailed fitness metrics from your Garmin watch or device",
+    "whoop": "Whoop",
+    "whoop_desc": "Track recovery, strain, and sleep metrics from your Whoop strap",
+    "polar": "Polar",
+    "polar_desc": "Connect Polar devices for advanced heart rate and training data",
+    "samsung_health": "Samsung Health",
+    "samsung_health_desc": "Sync health data from Samsung Galaxy devices and Galaxy Watch",
+    "secure_data_processing": "All data is processed securely with end-to-end encryption",
+    "not_available_on_platform": "Not available on this platform",
+    "connection_successful": "Device Connected Successfully",
+    "connection_failed": "Connection Failed",
+    "sync_successful": "Sync Completed Successfully",
+    "sync_failed": "Sync Failed",
+    "disconnect_confirmation": "Are you sure you want to disconnect this device?",
+    "disconnect_warning": "This will stop syncing data from this device.",
+    "loading_smart_devices": "Loading your smart devices...",
+    "refresh_data": "Refresh Data",
+    "device_settings": "Device Settings",
+    "sync_frequency": "Sync Frequency",
+    "auto_sync": "Auto Sync",
+    "manual_sync": "Manual Sync",
+    "sync_every_hour": "Every Hour",
+    "sync_every_day": "Daily",
+    "data_privacy": "Your health data is encrypted and never shared with third parties",
+    "battery_optimization": "Enable battery optimization for better device performance",
+    "notification_settings": "Notification Settings",
+    "sync_notifications": "Sync Notifications",
+    "error_notifications": "Error Notifications",
+    "weekly_summary": "Weekly Summary",
+    "device_health": "Device Health",
+    "connection_quality": "Connection Quality",
+    "excellent": "Excellent",
+    "good": "Good",
+    "poor": "Poor",
+    "troubleshooting": "Troubleshooting",
+    "reconnect_device": "Reconnect Device",
+    "reset_connection": "Reset Connection",
+    "contact_support": "Contact Support",
+    "device_compatibility": "Device Compatibility",
+    "minimum_requirements": "Minimum Requirements",
+    "supported_versions": "Supported Versions",
+    "setup_instructions": "Setup Instructions",
+    "step_by_step_guide": "Step-by-step setup guide",
+    "permissions_required": "Permissions Required",
+    "grant_permissions": "Grant Permissions",
+    "location_permission": "Location Permission",
+    "health_data_permission": "Health Data Permission",
+    "bluetooth_permission": "Bluetooth Permission",
+    "notification_permission": "Notification Permission"
   },
   "ai_chat": {
     "title": "AI Nutrition Assistant",
