--- a/client/src/i18n/locales/he.json
+++ b/client/src/i18n/locales/he.json
@@ -701,15 +701,87 @@
     "no_data": "אין נתונים זמינים"
   },
   "devices": {
-    "title": "מכשירים מחוברים",
-    "no_devices": "אין מכשירים מחוברים",
-    "add_device": "הוספת מכשיר",
-    "device_status": "סטטוס מכשיר",
+    "title": "מכשירים חכמים",
+    "subtitle": "חבר את מעקבי הכושר ואפליקציות הבריאות שלך למעקב בריאות מקיף",
+    "no_devices_connected": "אין מכשירים מחוברים",
+    "connect_devices_description": "חבר את הלבישים ואפליקציות הבריאות שלך כדי לעקוב אוטומטית אחרי נתוני הכושר, קלוריות שנשרפו, צעדים ועוד.",
+    "available_devices": "מכשירים זמינים",
+    "connected_devices": "מכשירים מחוברים",
+    "connect_devices_subtitle": "הקש על כל מכשיר למטה כדי להתחבר ולהתחיל לסנכרן את נתוני הבריאות שלך",
+    "device_status": "מצב המכשיר",
     "connected": "מחובר",
     "disconnected": "מנותק",
+    "primary": "ראשי",
     "sync_data": "סנכרון נתונים",
     "last_sync": "סנכרון אחרון",
-    "remove_device": "הסרת מכשיר"
+    "remove_device": "הסרת מכשיר",
+    "sync_all_devices": "סנכרן את כל המכשירים",
+    "todays_calorie_balance": "איזון קלוריות של היום",
+    "calories_in": "קלוריות נכנסות",
+    "calories_out": "קלוריות יוצאות",
+    "net_balance": "איזון נקי",
+    "todays_activity": "פעילות היום",
+    "steps": "צעדים",
+    "calories_burned": "קלוריות נשרפות",
+    "active_minutes": "דקות פעילות",
+    "avg_heart_rate": "דופק ממוצע",
+    "about_device_integration": "אודות שילוב מכשירים",
+    "apple_health": "Apple Health",
+    "apple_health_desc": "מסתנכרן אוטומטית עם אפליקציית הבריאות של iPhone לשילוב נתונים חלק",
+    "google_fit": "Google Fit",
+    "google_fit_desc": "חבר את חשבון Google Fit שלך כדי לעקוב אחרי פעילויות במכשירי Android",
+    "fitbit": "Fitbit",
+    "fitbit_desc": "סנכרן את נתוני מעקב Fitbit כולל צעדים, דופק ודפוסי שינה",
+    "garmin": "Garmin",
+    "garmin_desc": "יבא מדדי כושר מפורטים משעון או מכשיר Garmin שלך",
+    "whoop": "Whoop",
+    "whoop_desc": "עקוב אחרי התאוששות, מאמץ ומדדי שינה מרצועת Whoop שלך",
+    "polar": "Polar",
+    "polar_desc": "חבר מכשירי Polar לנתוני דופק ואימון מתקדמים",
+    "samsung_health": "Samsung Health",
+    "samsung_health_desc": "סנכרן נתוני בריאות ממכשירי Samsung Galaxy ו-Galaxy Watch",
+    "secure_data_processing": "כל הנתונים מעובדים בבטחה עם הצפנה מקצה לקצה",
+    "not_available_on_platform": "לא זמין בפלטפורמה זו",
+    "connection_successful": "המכשיר התחבר בהצלחה",
+    "connection_failed": "החיבור נכשל",
+    "sync_successful": "הסנכרון הושלם בהצלחה",
+    "sync_failed": "הסנכרון נכשל",
+    "disconnect_confirmation": "האם אתה בטוח שברצונך לנתק את המכשיר הזה?",
+    "disconnect_warning": "זה יפסיק את הסנכרון של נתונים מהמכשיר הזה.",
+    "loading_smart_devices": "טוען את המכשירים החכמים שלך...",
+    "refresh_data": "רענון נתונים",
+    "device_settings": "הגדרות מכשיר",
+    "sync_frequency": "תדירות סנכרון",
+    "auto_sync": "סנכרון אוטומטי",
+    "manual_sync": "סנכרון ידני",
+    "sync_every_hour": "כל שעה",
+    "sync_every_day": "יומי",
+    "data_privacy": "נתוני הבריאות שלך מוצפנים ולעולם לא משותפים עם צדדים שלישיים",
+    "battery_optimization": "אפשר אופטימיזציה של סוללה לביצועים טובים יותר של המכשיר",
+    "notification_settings": "הגדרות התראות",
+    "sync_notifications": "התראות סנכרון",
+    "error_notifications": "התראות שגיאה",
+    "weekly_summary": "סיכום שבועי",
+    "device_health": "בריאות המכשיר",
+    "connection_quality": "איכות החיבור",
+    "excellent": "מעולה",
+    "good": "טוב",
+    "poor": "גרוע",
+    "troubleshooting": "פתרון בעיות",
+    "reconnect_device": "חיבור מחדש של המכשיר",
+    "reset_connection": "איפוס החיבור",
+    "contact_support": "פנה לתמיכה",
+    "device_compatibility": "תאימות מכשיר",
+    "minimum_requirements": "דרישות מינימליות",
+    "supported_versions": "גרסאות נתמכות",
+    "setup_instructions": "הוראות הגדרה",
+    "step_by_step_guide": "מדריך הגדרה שלב אחר שלב",
+    "permissions_required": "הרשאות נדרשות",
+    "grant_permissions": "מתן הרשאות",
+    "location_permission": "הרשאת מיקום",
+    "health_data_permission": "הרשאת נתוני בריאות",
+    "bluetooth_permission": "הרשאת בלוטות'",
+    "notification_permission": "הרשאת התראות"
   },
   "ai_chat": {
     "title": "עוזר תזונה AI",
